added model for cities and addresses
